auth doc swagger
