# swagger.yml
@@ -29,13 +29,13 @@ components:
           example: "string"
         id:
           type: "number"
-          example: 599
+          example: 348
         sender_id:
           type: "number"
-          example: 389
+          example: 353
         recipient_id:
           type: "number"
-          example: 706
+          example: 563
         message:
           type: "string"
           example: "string"
@@ -58,13 +58,13 @@ components:
           example: "string"
         id:
           type: "number"
-          example: 290
+          example: 609
         text:
           type: "string"
           example: "string"
         user_id:
           type: "number"
-          example: 608
+          example: 19
         image_url:
           type: "string"
           example: "string"
@@ -120,22 +120,19 @@ components:
           example: "string"
         id:
           type: "number"
-          example: 376
+          example: 238
         message:
           type: "string"
           example: "string"
         user_id:
           type: "number"
-          example: 757
+          example: 591
         post_id:
           type: "number"
-          example: 819
-        reply_comment_id:
-          type: "number"
-          example: 336
+          example: 945
         hub_event_id:
           type: "number"
-          example: 461
+          example: 123
         created_at:
           type: "string"
           example: "2021-03-23T16:13:08.489+01:00"
@@ -150,63 +147,6 @@ components:
         post:
           $ref: "#/components/schemas/Post"
           example: "string"
-        replied:
-          $ref: "#/components/schemas/PostComment"
-          example: "string"
-        replies:
-          type: "array"
-          items:
-            $ref: "#/components/schemas/PostComment"
-            example: "string"
-        reactions:
-          type: "array"
-          items:
-            $ref: "#/components/schemas/PostCommentReaction"
-            example: "string"
-        reaction_count:
-          type: "array"
-          items:
-            $ref: "#/components/schemas/PostCommentReaction"
-            example: "string"
-        serialize_extras_true:
-          type: "string"
-          example: "string"
-      description: "Model"
-    PostCommentReaction:
-      type: "object"
-      properties:
-        static_table_post_comment_reactions:
-          type: "string"
-          example: "string"
-        id:
-          type: "number"
-          example: 580
-        emoji_type:
-          type: "string"
-          example: "string"
-        user_id:
-          type: "number"
-          example: 217
-        post_comment_id:
-          type: "number"
-          example: 672
-        hub_event_id:
-          type: "number"
-          example: 446
-        created_at:
-          type: "string"
-          example: "2021-03-23T16:13:08.489+01:00"
-          format: "date-time"
-        updated_at:
-          type: "string"
-          example: "2021-03-23T16:13:08.489+01:00"
-          format: "date-time"
-        user:
-          $ref: "#/components/schemas/User"
-          example: "string"
-        comment:
-          $ref: "#/components/schemas/PostComment"
-          example: "string"
         serialize_extras_true:
           type: "string"
           example: "string"
@@ -219,7 +159,7 @@ components:
           example: "string"
         id:
           type: "number"
-          example: 158
+          example: 148
         content_url:
           type: "string"
           example: "string"
@@ -234,13 +174,13 @@ components:
           example: "string"
         width:
           type: "number"
-          example: 891
+          example: 409
         height:
           type: "number"
-          example: 63
+          example: 635
         hub_event_id:
           type: "number"
-          example: 767
+          example: 596
         user:
           $ref: "#/components/schemas/User"
           example: "string"
@@ -256,19 +196,19 @@ components:
           example: "string"
         id:
           type: "number"
-          example: 536
+          example: 43
         emoji_type:
           type: "string"
           example: "string"
         user_id:
           type: "number"
-          example: 17
+          example: 953
         post_id:
           type: "number"
-          example: 498
+          example: 585
         hub_event_id:
           type: "number"
-          example: 965
+          example: 632
         created_at:
           type: "string"
           example: "2021-03-23T16:13:08.489+01:00"
@@ -480,7 +420,14 @@ paths:
                 message: "Logout successfully"
           description: "OK: {\"message\": \"Logout successfully\"}"
         401:
-          description: "Unauthorized"
+          content:
+            application/json:
+              schema:
+                type: "object"
+              example:
+                errors:
+                  - message: "E_UNAUTHORIZED_ACCESS: Unauthorized access"
+          description: "Unauthorized: {\"errors\": [{\"message\": \"E_UNAUTHORIZED_ACCESS: Unauthorized access\"}]}"
         403:
           description: "Forbidden"
       security:
@@ -510,28 +457,37 @@ paths:
               schema:
                 type: "object"
               example:
-                token: "xxxxxxx"
-          description: "OK: {\"token\": \"xxxxxxx\"}"
+                first_name: "Lucas"
+                last_name: "Garcez"
+                username: "lucas123"
+                email: "lucas123@gmail.com"
+                full_name: "Lucas Garcez"
+                id: "number"
+          description: "OK: {\"first_name\": \"Lucas\",\"last_name\": \"Garcez\",\"username\": \"lucas123\",\"email\": \"lucas123@gmail.com\",\"full_name\": \"Lucas Garcez\",\"id\": \"number\"}"
+        422:
+          content:
+            application/json:
+              schema:
+                type: "object"
+              example:
+                errors:
+                  - rule: "unique"
+                    field: "username"
+                    message: "unique validation failure"
+          description: "Unprocessable Entity: { \"errors\": [{\"rule\": \"unique\", \"field\": \"username\", \"message\": \"unique validation failure\"}]}"
       security: []
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/User"
+              type: "object"
             example:
-              static_table_users: "string"
-              id: "string"
-              full_name: "string"
-              first_name: "string"
-              last_name: "string"
-              username: "string"
-              profile_url: "string"
-              email: "johndoe@example.com"
-              temp_token: "string"
-              remember_me_token: "string"
-              is_online: true
-              temp_token_created_at: {}
-              remember_me_token_created_at: "2021-03-23T16:13:08.489+01:00"
+              firstName: "Lucas"
+              lastName: "Garcez"
+              username: "lucas123"
+              email: "lucas123@gmail.com"
+              password: "password"
+              password_confirmation: "password"
   /login:
     post:
       summary: "Login endpoint (AuthController::login)"
@@ -546,9 +502,9 @@ paths:
                 type: "object"
               example:
                 auth:
-                  type: "string"
+                  type: "bearer"
                   token: "string"
-          description: "OK: { \"auth\": {\"type\": \"string\", \"token\": \"string\"}}"
+          description: "OK: { \"auth\": {\"type\": \"bearer\", \"token\": \"string\"}}"
         401:
           content:
             application/json:
@@ -557,6 +513,17 @@ paths:
               example:
                 message: "Unable to login, please check your credentials or try again later."
           description: "Unauthorized: {\"message\": \"Unable to login, please check your credentials or try again later.\"}"
+        422:
+          content:
+            application/json:
+              schema:
+                type: "object"
+              example:
+                errors:
+                  - rule: "required"
+                    field: "email"
+                    message: "required validation failed"
+          description: "Unprocessable Entity: { \"errors\": [{\"rule\": \"required\", \"field\": \"email\", \"message\": \"required validation failed\"}]}"
       security: []
       requestBody:
         content:
@@ -564,8 +531,8 @@ paths:
             schema:
               type: "object"
             example:
-              email: "string"
-              password: "string"
+              email: "mariajulia@coffstack.com"
+              password: "password"
   /forgot-password:
     post:
       summary: "Forgot Password endpoint (AuthController::forgotPassword)"
@@ -649,6 +616,57 @@ paths:
       requestBody:
         content:
           application/json: {}
+  /validate-username:
+    get:
+      summary: "ValidateUsername endpoint (AuthController::isUsernameAvailable)"
+      description: "OK: {\"message\": [\"username is not available\", \"OR\", \"username is available\"], \"isAvailable\": [\"false\",\"OR\", \"true\"]}"
+      parameters: []
+      tags: []
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: "object"
+              example:
+                message:
+                  - "username is not available"
+                  - "OR"
+                  - "username is available"
+                isAvailable:
+                  - "false"
+                  - "OR"
+                  - "true"
+          description: "OK: {\"message\": [\"username is not available\", \"OR\", \"username is available\"], \"isAvailable\": [\"false\",\"OR\", \"true\"]}"
+        400:
+          content:
+            application/json:
+              schema:
+                type: "object"
+              example:
+                message: "username is required"
+          description: "Bad Request: {\"message\": \"username is required\"}"
+        500:
+          content:
+            application/json:
+              schema:
+                type: "object"
+              example:
+                message: "Internal server error"
+          description: "Internal Server Error: {\"message\": \"Internal server error\"}"
+      security: []
+  /validate-email:
+    get:
+      summary: " (AuthController::isEmailAvailable)"
+      description: ""
+      parameters: []
+      tags: []
+      responses:
+        200:
+          description: "OK"
+          content:
+            application/json: {}
+      security: []
   /user/post:
     get:
       summary: " (route.ts)"
@@ -791,16 +809,11 @@ paths:
       security:
         - BearerAuth:
             - "access"
-  /user/post_reaction/{postId}:
+  /user/post_reaction/x:postId:
     delete:
       summary: " (route.ts)"
       description: ""
-      parameters:
-        - in: "path"
-          name: "postId"
-          schema:
-            type: "string"
-          required: true
+      parameters: []
       tags:
         - "POST_REACTION"
       responses:
@@ -896,75 +909,6 @@ paths:
           required: true
       tags:
         - "POST_COMMENT"
-      responses:
-        401:
-          description: "Unauthorized"
-        403:
-          description: "Forbidden"
-      security:
-        - BearerAuth:
-            - "access"
-  /user/post_comment_reaction:
-    post:
-      summary: " (route.ts)"
-      description: ""
-      parameters: []
-      tags:
-        - "POST_COMMENT_REACTION"
-      responses:
-        401:
-          description: "Unauthorized"
-        403:
-          description: "Forbidden"
-      security:
-        - BearerAuth:
-            - "access"
-      requestBody:
-        content:
-          application/json: {}
-    get:
-      summary: " (route.ts)"
-      description: ""
-      parameters: []
-      tags:
-        - "POST_COMMENT_REACTION"
-      responses:
-        401:
-          description: "Unauthorized"
-        403:
-          description: "Forbidden"
-      security:
-        - BearerAuth:
-            - "access"
-    put:
-      summary: " (route.ts)"
-      description: ""
-      parameters: []
-      tags:
-        - "POST_COMMENT_REACTION"
-      responses:
-        401:
-          description: "Unauthorized"
-        403:
-          description: "Forbidden"
-      security:
-        - BearerAuth:
-            - "access"
-      requestBody:
-        content:
-          application/json: {}
-  /user/post_comment_reaction/{commentId}:
-    delete:
-      summary: " (route.ts)"
-      description: ""
-      parameters:
-        - in: "path"
-          name: "commentId"
-          schema:
-            type: "string"
-          required: true
-      tags:
-        - "POST_COMMENT_REACTION"
       responses:
         401:
           description: "Unauthorized"
@@ -1095,7 +1039,5 @@ tags:
     description: "Everything related to POST_REACTION"
   - name: "POST_COMMENT"
     description: "Everything related to POST_COMMENT"
-  - name: "POST_COMMENT_REACTION"
-    description: "Everything related to POST_COMMENT_REACTION"
   - name: "LIST"
     description: "Everything related to LIST"
